# ComfyUI-Local-MCP

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml  start_comfy_local_mcp.bat
.claude-plugin/: plugin.json
agents/: comfy-local.md
comfy_local_mcp/: __init__.py  client.py  config.py  generators.py  progress.py  server.py
comfy_local_mcp/workflows/: __init__.py  scene_image_flux.json  scene_image_sdxl_lora.json  scene_image_sdxl_turbo.json  scene_video_ltx.json  scene_video_ltx2.json  scene_video_wan22.json  skybox_sdxl_turbo.json
commands/: comfy-gen.md  comfy-setup.md
shim/: pyproject.toml
shim/engram_comfy/: __init__.py
skills/setup/: SKILL.md
skills/setup/references/: install-comfyui.md  models.md
