[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-local-mcp"
version = "0.1.0"
description = "Local-first, device-aware ComfyUI client + MCP server for building with local image/video generation"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "websockets>=12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
mcp = ["fastmcp>=3"]

[project.scripts]
comfy-local-mcp = "comfy_local_mcp.server:main"

[tool.setuptools.packages.find]
include = ["comfy_local_mcp*"]

[tool.setuptools.package-data]
comfy_local_mcp = ["workflows/*.json"]
